# fast-fourier-transform-visualization

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  application.cc  application.h  application_configuration.h  main.cc
lib/: CMakeLists.txt
lib/model/: CMakeLists.txt  cpu_worker.cc  cpu_worker.h  error.cc  error.h  fft_visualizer_model.cc  fft_visualizer_model.h  open_cl_model.cc  open_cl_model.h  opencl.h  opencl_model.cc  opencl_model.h  opencl_worker.cc  opencl_worker.h  worker.cc  worker.h  worker_model.cc  worker_model.h
lib/model/signal_generator/: garmonic_signal_generator.cc  garmonic_signal_generator.h  harmonic_signal_generator.cc  harmonic_signal_generator.h  polygarmonic_signal_generator.cc  polygarmonic_signal_generator.h  polyharmonic_signal_generator.cc  polyharmonic_signal_generator.h  signal_generator.cc  signal_generator.h
lib/model/worker/: cpu_worker.cc  cpu_worker.h  opencl_worker.cc  opencl_worker.h  worker.cc  worker.h
lib/view/: CMakeLists.txt  fft_visualizer_view.cc  fft_visualizer_view.h  graphs_view.cc  graphs_view.h  open_cl_info_view.cc  open_cl_info_view.h  view.cc  view.h  worker_picker_view.cc  worker_picker_view.h  worker_view.cc  worker_view.h
res/: CMakeLists.txt
res/kernels/: dft_kernels.cl  fft_kernels.cl
